--- a/Articles/SFC/Versoes/Historico.tex
+++ b/Articles/SFC/Versoes/Historico.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-11 qua 11:32
+% Created 2020-11-17 ter 12:06
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,32 +38,32 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section*{Versão \textit{<2020-10-16 sex>}}
-\label{sec:org362d4fc}
+\label{sec:org40aeff9}
 
 \subsection*{Introdução}
-\label{sec:org803ba43}
+\label{sec:org8a3fc5c}
 
 Não alterei nada do texto que estava na versão anterior. Apenas adicionei dois parágrafos (preliminares) em que tenho fazer uma mini revisão da literatura. Acho que não é muito interessante aumentar mais ainda a introdução. Digo isso porque a maioria dos textos citados na antiga revisão da literatura não eram sobre investimento residencial, mas sim sobre gastos autônomos. A discussão sobre investimento residencial ali era minúscula.
 
 \subsection*{Seção dos fatos estilizados}
-\label{sec:org274d0dc}
+\label{sec:org3bcd871}
 
 Não alterei nada do texto. Apenas substitui o gráfico do preço dos imóveis x endividamento (em número índice) pela curva de concentração. Estou pensando em como deixar esse gráfico mais \emph{printer-friendly} (talvez deixar os as curvas como linhas cheias e tracejadas).
 
 \subsection*{Revisão da literatura}
-\label{sec:orge9f0ce7}
+\label{sec:org70d9600}
 
 Não alterei nada dessa seção. Apenas pedi para não compilar (dado que optamos por tirá-la).
 
 \subsection*{Modelo}
-\label{sec:org624838f}
+\label{sec:org5e73e5e}
 
 Não houve nenhuma mudança radical. Fiz as correções que sugeriu. Mais no fim dessa seção reorganizei a ordem das equações de um jeito que fizesse mais sentido. Para isso fiz pequenas adaptações no texto. Também removi (comentei) a parte que igualava a oferta à demanda por imóveis. Não parecem ser equações essenciais. Se achar necessário, desfaço isso. De todo modo, achei que estavam jogadas ali. Seria o caso de repensar onde incluí-las.
 
 Dentre as perfumarias (estão nas minhas respostas aos seus comentários), ainda estou pensando em qual letra usar no lugar de taxa de lucro bruta e líquida.
 
 \subsection*{Solução analítica}
-\label{sec:org7e4a99e}
+\label{sec:org41ed78b}
 
 Fiz um meio termo entre as suas equações e as minhas anteriores. Em um primeiro momento, priorizei aquelas equações que me enviou no PDF. Apenas rearranjei a posição de algumas variáveis. Se achar melhor, deixo da forma que me enviou. Corrigi e atualizei a equação do \(k\). Estava faltando o termo \((1-R)\).
 
@@ -72,7 +72,7 @@ Adicionei a discussão da \emph{traverse} partindo relação entre \(g\) e \(g_K
 Na subseção da \emph{fully-adjusted position}, apenas retirei as equações desnecessárias e adaptei para ficar de uma forma mais elegante que o \emph{output} do \emph{python}. Deixei registrado as etapas até chegar nos \emph{stock-flow ratio} porque pensamos em mudar isso para o apêndice. Nesta versão, as variáveis ainda estão normalizadas pelo estoque de capital das firmas ou de casas. Ainda não alterei para a normalização pela renda porque não sei se aquelas notas que te envie estavam certas.
 
 \subsection*{Simulações}
-\label{sec:orge812c17}
+\label{sec:org366abcf}
 
 Essa foi a seção que teve mais mudança no texto. Acho que a principal coisa para nos preocuparmos aqui é se faz sentido aquele ``novo paradoxo'' sumir a partir do valor dos parâmetros. Ainda acho que esse resultado pode ter sumido antes e eu não vi por conta do efeito de escala no gráfico anterior. O mais estranho é que os parâmetros que estão diferentes em relação à dissertação não aparecem nas derivadas parciais do documento que te enviei. Outro possível problema é que esse paradoxo era bem pequeno na dissertação. Ainda assim, acho estranho mudar de direção.
 
@@ -89,28 +89,28 @@ Algumas observações em relação aos gráficos:
 \end{itemize}
 \end{itemize}
 \subsection*{Conclusões}
-\label{sec:org0e33752}
+\label{sec:orgb9b4960}
 Não alterei nada
 \subsection*{Apêndice A}
-\label{sec:orgcc9b78a}
+\label{sec:org6110b5c}
 
 Vi nos seus comentários que a nossa diferença com Freitas e Serrano não é tão importante. Dito isso, optei por comentar toda aquela discussão da estabilidade (é a mesma que a deles com a diferença de que \(own < \frac{\phi_0}{\phi_1}\)). Comecei esse apêndice a partir do trecho em que você indicou ser outro apêndice. Nesta nova versão, existem várias equações tal como saídas do \emph{python}. Não comecei a melhorá-las porque está em aberto se vamos priorizar a normalização pelo capital ou pela renda. De todo modo, imagino que as derivadas do \(k\) não devem mudar muito (já está com o \(k\) corrigido). Também achei melhor tirar as derivadas do estoque de moeda (uma vez que é resíduo, não tem muita importância para nós).
 
 \subsection*{Apêndice B}
-\label{sec:orge776442}
+\label{sec:org9d216e2}
 
 Talvez essa tabela mude na medida que forem usados outros valores dos parâmetros. Uma vez encerradas as alterações no modelo, rodo o comando para gerar essa tabela. Ainda não descobri como formatar melhor pelo python. Essa é uma das poucas coisas que acho melhor manter o mais próximo do \emph{output} do computador. Se um parecerista pedir o \emph{script}, ele deve chegar nesse mesmo lugar. Além disso, imagino que esse processo de formatação seja função do journal e não nossa.
 
 \subsection*{Apêndice C (em construção)}
-\label{sec:orgbac1a93}
+\label{sec:orgb0e1b8d}
 
 Eu tinha iniciado (faz um tempo) um código para retornar uma tabela de análise de sensibilidade similar à do Fazzari. Esse é um código que leva um certo tempo para rodar porque faço vários \emph{nested for loops} (a.k.a simulo um porrilhão de cenários rs). No final das contas acabei deixando de lado. Havendo tempo, penso em retornar a isso. Imagino que se desse certo, seria bastante interessante mas também acho que não esta entre as nossas prioridades. Talvez pudesse trabalhar nisso enquanto o artigo estivesse sendo revisado na expectativa de que algum parecerista peça. Por fim, esse apêndice inexistente é um dos motivos de ter tantos \emph{hashs} (``lixos'') no fim do apêndice B.
 
 \section*{Versão \textit{<2020-11-03 ter>}}
-\label{sec:org1870ee9}
+\label{sec:org02587d1}
 
 \subsection*{Seção empírica}
-\label{sec:org68973cc}
+\label{sec:org3554551}
 
 \begin{itemize}
 \item Feitas algumas pequenas correções no inglês
@@ -130,21 +130,21 @@ Eu tinha iniciado (faz um tempo) um código para retornar uma tabela de análise
 
 
 \subsection*{Modelo}
-\label{sec:org98c4940}
+\label{sec:org26c027c}
 
 \begin{itemize}
 \item[{$\square$}] Corrigidas referências quebradas (estavam com ??) desta seção
 \end{itemize}
 
 \subsection*{Analítica}
-\label{sec:orga256dbf}
+\label{sec:org58dc784}
 
 \begin{itemize}
 \item[{$\square$}] Corrigidas referências quebradas (estavam com ??) desta seção
 \end{itemize}
 
 \subsection*{Simulações}
-\label{sec:orgbef91b1}
+\label{sec:orgc1b7e12}
 
 \begin{itemize}
 \item Gráficos foram adaptados para escala de cinza
@@ -159,23 +159,23 @@ Eu tinha iniciado (faz um tempo) um código para retornar uma tabela de análise
 \end{itemize}
 
 \section*{Versão \textit{<2020-11-06 sex>}}
-\label{sec:org3f702af}
+\label{sec:orga309887}
 
 \subsection*{Introdução}
-\label{sec:org3c1b4ae}
+\label{sec:org674fe8a}
 
 Inalterada em relação à versão anterior
 
 \subsection*{Seção Empírica}
-\label{sec:org4a5c13e}
+\label{sec:org9afaaa2}
 
 Inalterada em relação à versão anterior
 
 \subsection*{Modelo}
-\label{sec:orga5ca41b}
+\label{sec:orgbcd031d}
 
 \subsubsection*{Equações gerais}
-\label{sec:org81eaf7e}
+\label{sec:org1ca3185}
 
 \begin{itemize}
 \item Feitas as correções sugeridas. Cabe pontuar
@@ -186,7 +186,7 @@ Inalterada em relação à versão anterior
 \end{itemize}
 
 \subsubsection*{Firmas}
-\label{sec:orgbe27bc1}
+\label{sec:org1b99122}
 \begin{itemize}
 \item Feitas as correções sugeridas. Vale pontuar
 \begin{itemize}
@@ -198,7 +198,7 @@ Inalterada em relação à versão anterior
 \end{itemize}
 \end{itemize}
 \subsubsection*{Bancos}
-\label{sec:org1ae6434}
+\label{sec:org77cc9bf}
 \begin{itemize}
 \item Feitas as correções sugeridas. Vale pontuar
 \begin{itemize}
@@ -217,12 +217,12 @@ are the same as on deposits (\(r_{m}\)) which is  exogenously determined by bank
 
 
 \subsubsection*{Trabalhadores}
-\label{sec:org3263e62}
+\label{sec:org5b80a4d}
 \begin{itemize}
 \item Feitas as correções sugeridas. Nada a comentar
 \end{itemize}
 \subsubsection*{Capitalistas}
-\label{sec:org4ec7c6b}
+\label{sec:orgc311a31}
 \begin{itemize}
 \item Feitas as correções sugeridas. Vale pontuar
 \begin{itemize}
@@ -245,9 +245,9 @@ are the same as on deposits (\(r_{m}\)) which is  exogenously determined by bank
 \end{quote}
 
 \subsection*{Solução analítica}
-\label{sec:orgcf83b1c}
+\label{sec:org9d47f63}
 \subsubsection*{Short-run}
-\label{sec:orge06ba4a}
+\label{sec:orgb322a1c}
 
 \begin{itemize}
 \item Feitas correções sugeridas. Vale pontuar
@@ -260,7 +260,7 @@ are the same as on deposits (\(r_{m}\)) which is  exogenously determined by bank
 \end{itemize}
 
 \subsubsection*{Analitical Traverse}
-\label{sec:org2c92291}
+\label{sec:orgb6f555c}
 
 \begin{itemize}
 \item Unida com a subseção seguinte e renomeada para \emph{Traverse and long-run Equilibrium}
@@ -274,13 +274,13 @@ are the same as on deposits (\(r_{m}\)) which is  exogenously determined by bank
 \item Conforme mencionado, parágrafo final que tratada dos impactos de \(g_{I_h}\) em \(k\) foi removido
 \end{itemize}
 \subsection*{Simulações}
-\label{sec:orgec8e83a}
+\label{sec:org7b5ca00}
 Inalterada em relação à versão anterior
 \subsection*{Conclusão}
-\label{sec:orgfefc751}
+\label{sec:org50b9274}
 Inalterada em relação à versão anterior
 \subsection*{Apêndice A}
-\label{sec:org53b3937}
+\label{sec:org237654a}
 
 \begin{itemize}
 \item Resultados do python para \(k^\star\) e \(\ell_f^\star\) foram rearranjados
@@ -294,25 +294,25 @@ Inalterada em relação à versão anterior
 \end{itemize}
 
 \section*{Versão \textit{<2020-11-11 qua>}}
-\label{sec:orgdbd008e}
+\label{sec:org3fae121}
 
 \subsection*{Introdução}
-\label{sec:org02ba475}
+\label{sec:orgc0e0645}
 
 Não alterado.
 
 \subsection*{Fatos estilizados}
-\label{sec:org2b4f7f8}
+\label{sec:org21715a0}
 
 Não alterado.
 
 \subsection*{Modelo}
-\label{sec:orgd2b3564}
+\label{sec:orgb635250}
 
 Não alterado.
 
 \subsection*{Solução analítica}
-\label{sec:orgf50ae67}
+\label{sec:org0f66870}
 
 \begin{itemize}
 \item Algumas correções pequenas
@@ -354,7 +354,7 @@ Desse modo, se \(\ell_f^\star\) reduz, taxa de lucro bruta e líquida se aproxim
 Deixei a equação original enquanto etapa para chegar nessa nova equação e adicionei uma para a taxa de lucro líquida em função de \(\ell_f^\star\) para referenciar nas simulações.
 
 \subsection*{Simulações}
-\label{sec:org7f248cd}
+\label{sec:org7629949}
 
 \begin{itemize}
 \item Para manter consistência entre as equações e simulações, será plotada a razão dívida dos capitalistas/imóveis. O que acha?
@@ -368,12 +368,12 @@ Deixei a equação original enquanto etapa para chegar nessa nova equação e ad
 
 
 \subsubsection*{Introdução}
-\label{sec:orgfcf00e5}
+\label{sec:org4ebab31}
 
 Feitas as correções sugeridas.
 
 \subsubsection*{Choque na taxa de salários}
-\label{sec:orgc207e2f}
+\label{sec:org75b181b}
 
 \begin{itemize}
 \item Primeira frase alterada para
@@ -395,7 +395,7 @@ A wage-share decrease has permanent negative impact on output level --- due to c
 \item Corrigi \emph{oan-to-profit ratio} para \emph{loan-to-capital ratio}
 \end{itemize}
 \subsubsection*{Aumento da inflação de imóveis}
-\label{sec:orgce68f86}
+\label{sec:org0096c09}
 
 Feitas as correções sugeridas. Vale destacar que o último parágrafo foi alterado para
 
@@ -419,13 +419,13 @@ A seguinte frase foi removida: Besides the usual SSM results, we report some par
 
 
 \subsubsection*{Aumento da taxa de juros}
-\label{sec:org74e0867}
+\label{sec:orgf59f8ae}
 \begin{itemize}
 \item This result stem from the \(\Rightarrow\) This effect is a result of the
 \end{itemize}
 
 \subsubsection*{Dados reais}
-\label{sec:org8dffb25}
+\label{sec:org2e8007e}
 
 \begin{itemize}
 \item Mencionei a seção dos fatos estilizados
@@ -450,7 +450,91 @@ A seguinte frase foi removida: Besides the usual SSM results, we report some par
 \end{itemize}
 \end{itemize}
 
+\section*{Versão \textit{<2020-11-20 sex>}}
+\label{sec:orgb7bddb7}
+
+\subsection*{Introdução}
+\label{sec:orgd5800e8}
+
+\begin{itemize}
+\item \emph{try} removido
+\item demand-led agenda \(\Rightarrow\) demand-led growth theory research agenda
+\item Trecho sobre taxa própria alterado para
+\end{itemize}
+
+\begin{quote}
+One way to do this is through houses' own rate of interest.
+Originally introduced by \textcite{Sraffa_Own_1932} and applied to the US case by \textcite{teixeira_crescimento_2015}, this concept allows to connect asset bubble with residential investment.
+\end{quote}
+
+
+\subsection*{Seção empírica}
+\label{sec:org3233df3}
+
+\begin{itemize}
+\item Corrigido problema com as aspas
+\item Trecho mencionando paper econométrico que testa o \cite{leamer_housing_2007} logo após \cite{fiebiger_semi-autonomous_2018} e \cite{fiebiger_trend_2017}
+\end{itemize}
+
+\begin{quote}
+Alternatively, \textcite{huang_is_2020} estimate a Structural Vector Autoregressive (SVEC) model in a time-scale framework for the OECD countries to assess both prediction and causality relations stated by \textcite{leamer_housing_2007}.
+They report that residential investment predicts the US  macroeconomic fluctuation and housing related variables (house prices, real mortgage rate --- deflated by a general price index --- and bank spread) lead the business cycle in all G7 countries.
+\end{quote}
+
+\begin{itemize}
+\item \emph{In this paper, we argue that besides this growing body of literature that recognizes the macroeconomic importance of residential investment, little progress has been made in understanding its theoretical determinants.} \(\Rightarrow\) \emph{In this paper, we argue that besides this growing body of literature that recognizes the macroeconomic importance of residential investment, little progress has been made in connecting asset bubbles with its macroeconomics consequences.}
+\item Na página 4, alterei: \emph{higher growth rate} \(\Rightarrow\) \emph{higher residential investment growth rate}
+\item Alterei a frase seguinte de \emph{Following the Sraffian supermultiplier growth model, we conclude that increase of non-residential investment is the result of capital stock adjustment principle} \(\Rightarrow\) \emph{Accordingly to the Sraffian Supermultiplier model, we can interpret subsequent non-residential investment increase as a result of capital stock adjustment principle}
+\begin{itemize}
+\item Não entendi muito bem a sua sugestão. Fiquei em dúvida se era para alterar apenas a frase em amarelo ou juntar com a seguinte
+\end{itemize}
+\item Após as curvas de concentração: \emph{suggests an increase in the demand for properties in the expectation of capital gains} \(\Rightarrow\) \emph{suggests other purposes, such as rental income, speculation, etc}
+\begin{itemize}
+\item O que achou da explicação das curvas de concentração? sugestões?
+\end{itemize}
+\item Iniciei subseção da taxa própria da seguinte forma:
+\end{itemize}
+
+\begin{quote}
+Housing macroeconometric literature usually defines real mortgage interest rate as the nominal one deflated by a general prince index.
+For example, this is the case for \textcites{goodhart_house_2008}{arestis_economic_2019}{huang_is_2020}.
+In a prominent econometric model for the US economy, \textcite{fair_macroeconometric_2013} reports that conventional real mortgage interest rate is statistically insignificant to describe residential investment and starts using mortgage rate in nominal terms.
+
+[Achei melhor parar o parágrafo anterior ai e iniciar a discussão da taxa própria no próximo]
+
+Alternatively, \textcite{teixeira_crescimento_2015} proposes the so-called houses own rate of interest (\(own\)) in order to analyze the relation between residential investment, real estate inflation and interest rates during the U.S. housing bubble episode.
+\end{quote}
+
+
+Segui sua sugestão e achei que essa forma de organizar o argumento ficou melhor e menos repetitiva. Porém, acho que falta explicar melhor o porquê usar uma taxa de juros real das hipotecas diferente. Digo isso porque o parecerista pode achar estranho irmos nessa direção sendo que a literatura empírica aponta o oposto. Resumindo, acho que precisamos conectar melhor a discussão do Fair com a da sua tese. Sugestões?
+
+
+
+\subsection*{Modelo}
+\label{sec:org068bbb3}
+
+Nenhuma alteração
+
+\subsection*{Solução analítica}
+\label{sec:orged9a6d4}
+
+Nenhuma alteração
+\subsection*{Simulações}
+\label{sec:org3d9944f}
+
+Nenhuma alteração
+
+\subsection*{Conclusão}
+\label{sec:org75b66c4}
+
+Nenhuma alteração
+
+\subsection*{Apêndices}
+\label{sec:orge6149de}
+
+Nenhuma alteração
+
 \section*{Referências}
-\label{sec:org9d58dd1}
+\label{sec:org0ff9ec7}
 \printbibliography[heading=none]
 \end{document}
