--- a/Materias/2S2020/PED_CE342/Turma_A/Turma_A.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/Turma_A.org
@@ -6,6 +6,7 @@
 #+EXCLUDE_TAGS: private noexport
 #+PROPERTY: header-args:python  :session *Turma_A* :python /usr/bin/python3 :exports results
 #+LATEX_HEADER: \usepackage{longtable, pdflscape, booktabs}
+
 * Configuração                                                     :noexport:
 
 ** Pacotes
@@ -52,10 +53,10 @@ min_df = df[["RA"]].astype(str)
 ** Funções
 
 #+BEGIN_SRC python
-def importar_ext(Turma=Turma, data="2020-10-19", prefix='.'):
+def importar_ext(Turma=Turma, data="2020-10-19", prefix='.', rows=3):
     tmp = pd.read_csv(
         f'{prefix}/Presença/Turma_{Turma} ({data}).csv',
-        skiprows=3,
+        skiprows=rows,
         usecols=[0,6,7],
         sep=',',
     )
@@ -116,12 +117,17 @@ df = min_df.reset_index().merge(
      ).reset_index().merge(
     nv_classicos.reset_index(),
     how='left',
-    ).set_index('RA')
+    )#.set_index('RA').join(
+     #   importar_ext(Turma=Turma, data="2020-11-16"),
+     #   how='left', on='Nome'
+     #)
 
 df["Email"] = [df["Nome"][i][0] + str(df.index[i]) + "@dac.unicamp.br" for i in range(len(df.index))]
 #+END_SRC
 
 #+RESULTS:
+
+
 
 
 
@@ -151,7 +157,6 @@ print('\end{center}')
 \caption{Notas das resenhas - Monetaristas}\\
 \toprule
 {} &  Resenha Monetaristas \\
-\textbf{RA    } &                       \\
 \midrule
 \endhead
 \midrule
@@ -161,49 +166,49 @@ print('\end{center}')
 
 \bottomrule
 \endlastfoot
-\textbf{212883} &                  50.0 \\
-\textbf{212900} &                  50.0 \\
-\textbf{231302} &                  70.0 \\
-\textbf{231732} &                   0.0 \\
-\textbf{213360} &                  70.0 \\
-\textbf{231898} &                  70.0 \\
-\textbf{213731} &                  70.0 \\
-\textbf{232395} &                  30.0 \\
-\textbf{232796} &                  70.0 \\
-\textbf{233335} &                  50.0 \\
-\textbf{233747} &                  70.0 \\
-\textbf{255207} &                  50.0 \\
-\textbf{216459} &                   0.0 \\
-\textbf{235951} &                  30.0 \\
-\textbf{236276} &                   0.0 \\
-\textbf{218090} &                  70.0 \\
-\textbf{255241} &                  50.0 \\
-\textbf{237618} &                  70.0 \\
-\textbf{199735} &                  50.0 \\
-\textbf{218975} &                  70.0 \\
-\textbf{238414} &                  70.0 \\
-\textbf{219613} &                  50.0 \\
-\textbf{219907} &                 100.0 \\
-\textbf{239052} &                  70.0 \\
-\textbf{220194} &                  70.0 \\
-\textbf{201326} &                  50.0 \\
-\textbf{156242} &                   0.0 \\
-\textbf{240317} &                  30.0 \\
-\textbf{240409} &                  70.0 \\
-\textbf{221515} &                  50.0 \\
-\textbf{255293} &                  30.0 \\
-\textbf{241430} &                  50.0 \\
-\textbf{222315} &                  50.0 \\
-\textbf{184528} &                  50.0 \\
-\textbf{222615} &                  70.0 \\
-\textbf{186966} &                   0.0 \\
-\textbf{244321} &                  50.0 \\
-\textbf{244379} &                  50.0 \\
-\textbf{187323} &                 100.0 \\
-\textbf{206194} &                  50.0 \\
-\textbf{245212} &                 100.0 \\
-\textbf{206883} &                   0.0 \\
-\textbf{245459} &                  70.0 \\
+\textbf{0 } &                  50.0 \\
+\textbf{1 } &                  50.0 \\
+\textbf{2 } &                  70.0 \\
+\textbf{3 } &                   0.0 \\
+\textbf{4 } &                  70.0 \\
+\textbf{5 } &                  70.0 \\
+\textbf{6 } &                  70.0 \\
+\textbf{7 } &                  30.0 \\
+\textbf{8 } &                  70.0 \\
+\textbf{9 } &                  50.0 \\
+\textbf{10} &                  70.0 \\
+\textbf{11} &                  50.0 \\
+\textbf{12} &                   0.0 \\
+\textbf{13} &                  30.0 \\
+\textbf{14} &                   0.0 \\
+\textbf{15} &                  70.0 \\
+\textbf{16} &                  50.0 \\
+\textbf{17} &                  70.0 \\
+\textbf{18} &                  50.0 \\
+\textbf{19} &                  70.0 \\
+\textbf{20} &                  70.0 \\
+\textbf{21} &                  50.0 \\
+\textbf{22} &                 100.0 \\
+\textbf{23} &                  70.0 \\
+\textbf{24} &                  70.0 \\
+\textbf{25} &                  50.0 \\
+\textbf{26} &                   0.0 \\
+\textbf{27} &                  30.0 \\
+\textbf{28} &                  70.0 \\
+\textbf{29} &                  50.0 \\
+\textbf{30} &                  30.0 \\
+\textbf{31} &                  50.0 \\
+\textbf{32} &                  50.0 \\
+\textbf{33} &                  50.0 \\
+\textbf{34} &                  70.0 \\
+\textbf{35} &                   0.0 \\
+\textbf{36} &                  50.0 \\
+\textbf{37} &                  50.0 \\
+\textbf{38} &                 100.0 \\
+\textbf{39} &                  50.0 \\
+\textbf{40} &                 100.0 \\
+\textbf{41} &                   0.0 \\
+\textbf{42} &                  70.0 \\
 \end{longtable}
 \end{center}
 #+end_export
@@ -294,7 +299,6 @@ print('\end{center}')
 \caption{Notas das resenhas - Novos Clássicos}\\
 \toprule
 {} &  Resenha Novos Clássicos \\
-\textbf{RA    } &                          \\
 \midrule
 \endhead
 \midrule
@@ -304,49 +308,49 @@ print('\end{center}')
 
 \bottomrule
 \endlastfoot
-\textbf{212883} &                      5.0 \\
-\textbf{212900} &                     10.0 \\
-\textbf{231302} &                      5.0 \\
-\textbf{231732} &                        - \\
-\textbf{213360} &                     10.0 \\
-\textbf{231898} &                      5.0 \\
-\textbf{213731} &                     10.0 \\
-\textbf{232395} &                      7.0 \\
-\textbf{232796} &                      5.0 \\
-\textbf{233335} &                      5.0 \\
-\textbf{233747} &                     10.0 \\
-\textbf{255207} &                      0.0 \\
-\textbf{216459} &                        - \\
-\textbf{235951} &                        - \\
-\textbf{236276} &                        - \\
-\textbf{218090} &                     10.0 \\
-\textbf{255241} &                      7.0 \\
-\textbf{237618} &                     10.0 \\
-\textbf{199735} &                      0.0 \\
-\textbf{218975} &                      5.0 \\
-\textbf{238414} &                      0.0 \\
-\textbf{219613} &                      5.0 \\
-\textbf{219907} &                      7.0 \\
-\textbf{239052} &                      7.0 \\
-\textbf{220194} &                      5.0 \\
-\textbf{201326} &                     10.0 \\
-\textbf{156242} &                      5.0 \\
-\textbf{240317} &                      5.0 \\
-\textbf{240409} &                      7.0 \\
-\textbf{221515} &                      5.0 \\
-\textbf{255293} &                      0.0 \\
-\textbf{241430} &                      5.0 \\
-\textbf{222315} &                     10.0 \\
-\textbf{184528} &                      0.0 \\
-\textbf{222615} &                      3.0 \\
-\textbf{186966} &                      0.0 \\
-\textbf{244321} &                      5.0 \\
-\textbf{244379} &                      5.0 \\
-\textbf{187323} &                      7.0 \\
-\textbf{206194} &                      5.0 \\
-\textbf{245212} &                     10.0 \\
-\textbf{206883} &                      3.0 \\
-\textbf{245459} &                      5.0 \\
+\textbf{0 } &                      5.0 \\
+\textbf{1 } &                     10.0 \\
+\textbf{2 } &                      5.0 \\
+\textbf{3 } &                        - \\
+\textbf{4 } &                     10.0 \\
+\textbf{5 } &                      5.0 \\
+\textbf{6 } &                     10.0 \\
+\textbf{7 } &                      7.0 \\
+\textbf{8 } &                      5.0 \\
+\textbf{9 } &                      5.0 \\
+\textbf{10} &                     10.0 \\
+\textbf{11} &                      0.0 \\
+\textbf{12} &                        - \\
+\textbf{13} &                        - \\
+\textbf{14} &                        - \\
+\textbf{15} &                     10.0 \\
+\textbf{16} &                      7.0 \\
+\textbf{17} &                     10.0 \\
+\textbf{18} &                      0.0 \\
+\textbf{19} &                      5.0 \\
+\textbf{20} &                      0.0 \\
+\textbf{21} &                      5.0 \\
+\textbf{22} &                      7.0 \\
+\textbf{23} &                      7.0 \\
+\textbf{24} &                      5.0 \\
+\textbf{25} &                     10.0 \\
+\textbf{26} &                      5.0 \\
+\textbf{27} &                      5.0 \\
+\textbf{28} &                      7.0 \\
+\textbf{29} &                      5.0 \\
+\textbf{30} &                      0.0 \\
+\textbf{31} &                      5.0 \\
+\textbf{32} &                     10.0 \\
+\textbf{33} &                      0.0 \\
+\textbf{34} &                      3.0 \\
+\textbf{35} &                      0.0 \\
+\textbf{36} &                      5.0 \\
+\textbf{37} &                      5.0 \\
+\textbf{38} &                      7.0 \\
+\textbf{39} &                      5.0 \\
+\textbf{40} &                     10.0 \\
+\textbf{41} &                      3.0 \\
+\textbf{42} &                      5.0 \\
 \end{longtable}
 \end{center}
 #+end_export
@@ -435,19 +439,19 @@ resultado
 #+RESULTS:
 #+begin_example
 RA Sorteados
-1        156242
-2        187323
-3        212900
-4        219613
-5        219907
-6        222615
-7        231302
-8        232796
-9        239052
-10       240409
-11       244321
-12       244379
-13       245459
+1              1
+2              2
+3              8
+4             21
+5             22
+6             23
+7             26
+8             28
+9             34
+10            36
+11            37
+12            38
+13            42
 #+end_example
 
 *** Resultado Turnitin
@@ -615,63 +619,64 @@ print('\end{landscape}\end{center}')
 \small
 \setlength\LTleft{0pt}
 \setlength\LTright{0pt}
-\begin{longtable}{llrrrrrl}
+\begin{longtable}{lllrrrrrl}
 \caption{Lista de presença e de notas}\label{lista}\\
 \toprule
-{} &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &                   Email \\
-\textbf{RA    } &                                       &                       &             &             &             &                          &                         \\
+{} &      RA &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &               Email \\
 \midrule
 \endhead
 \midrule
-\multicolumn{8}{r}{{Continued on next page}} \\
+\multicolumn{9}{r}{{Continued on next page}} \\
 \midrule
 \endfoot
 
 \bottomrule
 \endlastfoot
-\textbf{212883} &                    ana pasti villalba &                  50.0 &           - &           - &       11.30 &                      5.0 &  a212883@dac.unicamp.br \\
-\textbf{212900} &                     ana paula martins &                  50.0 &        0.00 &        0.00 &       14.78 &                     10.0 &  a212900@dac.unicamp.br \\
-\textbf{231302} &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &       94.78 &                      5.0 &  a231302@dac.unicamp.br \\
-\textbf{231732} &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &  a231732@dac.unicamp.br \\
-\textbf{213360} &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &        0.00 &                     10.0 &  a213360@dac.unicamp.br \\
-\textbf{231898} &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &       13.04 &                      5.0 &  b231898@dac.unicamp.br \\
-\textbf{213731} &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &       31.30 &                     10.0 &  b213731@dac.unicamp.br \\
-\textbf{232395} &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &       12.17 &                      7.0 &  b232395@dac.unicamp.br \\
-\textbf{232796} &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &       18.26 &                      5.0 &  c232796@dac.unicamp.br \\
-\textbf{233335} &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &       12.17 &                      5.0 &  d233335@dac.unicamp.br \\
-\textbf{233747} &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &       95.65 &                     10.0 &  e233747@dac.unicamp.br \\
-\textbf{255207} &                  fernanda lima santos &                  50.0 &           - &           - &           - &                      0.0 &  f255207@dac.unicamp.br \\
-\textbf{216459} &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &  g216459@dac.unicamp.br \\
-\textbf{235951} &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &        0.00 &                        - &  g235951@dac.unicamp.br \\
-\textbf{236276} &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &        0.00 &                        - &  g236276@dac.unicamp.br \\
-\textbf{218090} &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &       93.04 &                     10.0 &  i218090@dac.unicamp.br \\
-\textbf{255241} &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &       87.83 &                      7.0 &  i255241@dac.unicamp.br \\
-\textbf{237618} &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &  j237618@dac.unicamp.br \\
-\textbf{199735} &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &  j199735@dac.unicamp.br \\
-\textbf{218975} &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &  j218975@dac.unicamp.br \\
-\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      5.0 &  j238414@dac.unicamp.br \\
-\textbf{219613} &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &  k219613@dac.unicamp.br \\
-\textbf{219907} &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &  l219907@dac.unicamp.br \\
-\textbf{239052} &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &  l239052@dac.unicamp.br \\
-\textbf{220194} &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &       54.78 &                      5.0 &  l220194@dac.unicamp.br \\
-\textbf{201326} &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &        6.09 &                     10.0 &  l201326@dac.unicamp.br \\
-\textbf{156242} &                 leticia da silva cruz &                   0.0 &           - &           - &       56.52 &                      5.0 &  l156242@dac.unicamp.br \\
-\textbf{240317} &                       luis felipe avi &                  30.0 &           - &       30.77 &        7.83 &                      5.0 &  l240317@dac.unicamp.br \\
-\textbf{240409} &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &        8.70 &                      7.0 &  l240409@dac.unicamp.br \\
-\textbf{221515} &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &       42.61 &                      5.0 &  m221515@dac.unicamp.br \\
-\textbf{255293} &         maria júlia faustino da silva &                  30.0 &           - &           - &        0.00 &                      0.0 &  m255293@dac.unicamp.br \\
-\textbf{241430} &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &       27.83 &                      5.0 &  m241430@dac.unicamp.br \\
-\textbf{222315} &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &        7.83 &                     10.0 &  m222315@dac.unicamp.br \\
-\textbf{184528} &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &        0.00 &                      0.0 &  m184528@dac.unicamp.br \\
-\textbf{222615} &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &       89.57 &                      3.0 &  m222615@dac.unicamp.br \\
-\textbf{186966} &     samuel henrique rezende bernardes &                   0.0 &           - &           - &           - &                      0.0 &  s186966@dac.unicamp.br \\
-\textbf{244321} &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &       92.17 &                      5.0 &  s244321@dac.unicamp.br \\
-\textbf{244379} &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &       79.13 &                      5.0 &  s244379@dac.unicamp.br \\
-\textbf{187323} &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &        7.83 &                      7.0 &  t187323@dac.unicamp.br \\
-\textbf{206194} &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &  t206194@dac.unicamp.br \\
-\textbf{245212} &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &  v245212@dac.unicamp.br \\
-\textbf{206883} &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &  v206883@dac.unicamp.br \\
-\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      0.0 &  v245459@dac.unicamp.br \\
+\textbf{0     } &  212883 &                    ana pasti villalba &                  50.0 &           - &           - &       11.30 &                      5.0 &   a0@dac.unicamp.br \\
+\textbf{1     } &  212900 &                     ana paula martins &                  50.0 &        0.00 &        0.00 &       14.78 &                     10.0 &   a1@dac.unicamp.br \\
+\textbf{2     } &  231302 &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &       94.78 &                      5.0 &   a2@dac.unicamp.br \\
+\textbf{3     } &  231732 &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &   a3@dac.unicamp.br \\
+\textbf{4     } &  213360 &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &        0.00 &                     10.0 &   a4@dac.unicamp.br \\
+\textbf{5     } &  231898 &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &       13.04 &                      5.0 &   b5@dac.unicamp.br \\
+\textbf{6     } &  213731 &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &       31.30 &                     10.0 &   b6@dac.unicamp.br \\
+\textbf{7     } &  232395 &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &       12.17 &                      7.0 &   b7@dac.unicamp.br \\
+\textbf{8     } &  232796 &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &       18.26 &                      5.0 &   c8@dac.unicamp.br \\
+\textbf{9     } &  233335 &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &       12.17 &                      5.0 &   d9@dac.unicamp.br \\
+\textbf{10    } &  233747 &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &       95.65 &                     10.0 &  e10@dac.unicamp.br \\
+\textbf{11    } &  255207 &                  fernanda lima santos &                  50.0 &           - &           - &           - &                      0.0 &  f11@dac.unicamp.br \\
+\textbf{12    } &  216459 &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &  g12@dac.unicamp.br \\
+\textbf{13    } &  235951 &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &        0.00 &                        - &  g13@dac.unicamp.br \\
+\textbf{14    } &  236276 &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &        0.00 &                        - &  g14@dac.unicamp.br \\
+\textbf{15    } &  218090 &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &       93.04 &                     10.0 &  i15@dac.unicamp.br \\
+\textbf{16    } &  255241 &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &       87.83 &                      7.0 &  i16@dac.unicamp.br \\
+\textbf{17    } &  237618 &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &  j17@dac.unicamp.br \\
+\textbf{18    } &  199735 &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &  j18@dac.unicamp.br \\
+\textbf{19    } &  218975 &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &  j19@dac.unicamp.br \\
+\textbf{20    } &  238414 &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      0.0 &  j20@dac.unicamp.br \\
+\textbf{21    } &  219613 &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &  k21@dac.unicamp.br \\
+\textbf{22    } &  219907 &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &  l22@dac.unicamp.br \\
+\textbf{23    } &  239052 &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &  l23@dac.unicamp.br \\
+\textbf{24    } &  220194 &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &       54.78 &                      5.0 &  l24@dac.unicamp.br \\
+\textbf{25    } &  201326 &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &        6.09 &                     10.0 &  l25@dac.unicamp.br \\
+\textbf{26    } &  156242 &                 leticia da silva cruz &                   0.0 &           - &           - &       56.52 &                      5.0 &  l26@dac.unicamp.br \\
+\textbf{27    } &  240317 &                       luis felipe avi &                  30.0 &           - &       30.77 &        7.83 &                      5.0 &  l27@dac.unicamp.br \\
+\textbf{28    } &  240409 &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &        8.70 &                      7.0 &  l28@dac.unicamp.br \\
+\textbf{29    } &  221515 &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &       42.61 &                      5.0 &  m29@dac.unicamp.br \\
+\textbf{30    } &  255293 &         maria júlia faustino da silva &                  30.0 &           - &           - &        0.00 &                      0.0 &  m30@dac.unicamp.br \\
+\textbf{31    } &  241430 &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &       27.83 &                      5.0 &  m31@dac.unicamp.br \\
+\textbf{32    } &  222315 &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &        7.83 &                     10.0 &  m32@dac.unicamp.br \\
+\textbf{33    } &  184528 &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &        0.00 &                      0.0 &  m33@dac.unicamp.br \\
+\textbf{34    } &  222615 &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &       89.57 &                      3.0 &  m34@dac.unicamp.br \\
+\textbf{35    } &  186966 &     samuel henrique rezende bernardes &                   0.0 &           - &           - &           - &                      0.0 &  s35@dac.unicamp.br \\
+\textbf{36    } &  244321 &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &       92.17 &                      5.0 &  s36@dac.unicamp.br \\
+\textbf{37    } &  244379 &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &       79.13 &                      5.0 &  s37@dac.unicamp.br \\
+\textbf{38    } &  187323 &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &        7.83 &                      7.0 &  t38@dac.unicamp.br \\
+\textbf{39    } &  206194 &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &  t39@dac.unicamp.br \\
+\textbf{40    } &  245212 &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &  v40@dac.unicamp.br \\
+\textbf{41    } &  206883 &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &  v41@dac.unicamp.br \\
+\textbf{42    } &  245459 &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      5.0 &  v42@dac.unicamp.br \\
+\textbf{245459} &       - &                                     - &                     - &           - &           - &           - &                      0.0 &                   - \\
+\textbf{238414} &       - &                                     - &                     - &           - &           - &           - &                      5.0 &                   - \\
 \end{longtable}
 \end{landscape}\end{center}
 #+end_export
@@ -679,6 +684,7 @@ print('\end{landscape}\end{center}')
 
 * Seminários
 ** Sorteio
+
 #+BEGIN_SRC python :results table latex
 atas = [f"Ata {i}" for i in np.random.choice(a=[i for i in range(1,num_grupos+1)], size=num_grupos, replace=False)]
 grupos = {f"Grupo {i+1}":atas[i] for i in range(num_grupos)}
