--- a/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
+++ b/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-16 seg 16:35
+% Created 2020-11-16 seg 20:26
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,14 +38,13 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Monetaristas}
-\label{sec:orgbd1f7a7}
+\label{sec:orgdb8e0cd}
 
 \begin{center}
 \begin{longtable}{lr}
 \caption{Notas das resenhas - Monetaristas}\\
 \toprule
 {} &  Resenha Monetaristas \\
-\textbf{RA    } &                       \\
 \midrule
 \endhead
 \midrule
@@ -55,67 +54,67 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 
 \bottomrule
 \endlastfoot
-\textbf{212883} &                  50.0 \\
-\textbf{212900} &                  50.0 \\
-\textbf{231302} &                  70.0 \\
-\textbf{231732} &                   0.0 \\
-\textbf{213360} &                  70.0 \\
-\textbf{231898} &                  70.0 \\
-\textbf{213731} &                  70.0 \\
-\textbf{232395} &                  30.0 \\
-\textbf{232796} &                  70.0 \\
-\textbf{233335} &                  50.0 \\
-\textbf{233747} &                  70.0 \\
-\textbf{255207} &                  50.0 \\
-\textbf{216459} &                   0.0 \\
-\textbf{235951} &                  30.0 \\
-\textbf{236276} &                   0.0 \\
-\textbf{218090} &                  70.0 \\
-\textbf{255241} &                  50.0 \\
-\textbf{237618} &                  70.0 \\
-\textbf{199735} &                  50.0 \\
-\textbf{218975} &                  70.0 \\
-\textbf{238414} &                  70.0 \\
-\textbf{219613} &                  50.0 \\
-\textbf{219907} &                 100.0 \\
-\textbf{239052} &                  70.0 \\
-\textbf{220194} &                  70.0 \\
-\textbf{201326} &                  50.0 \\
-\textbf{156242} &                   0.0 \\
-\textbf{240317} &                  30.0 \\
-\textbf{240409} &                  70.0 \\
-\textbf{221515} &                  50.0 \\
-\textbf{255293} &                  30.0 \\
-\textbf{241430} &                  50.0 \\
-\textbf{222315} &                  50.0 \\
-\textbf{184528} &                  50.0 \\
-\textbf{222615} &                  70.0 \\
-\textbf{186966} &                   0.0 \\
-\textbf{244321} &                  50.0 \\
-\textbf{244379} &                  50.0 \\
-\textbf{187323} &                 100.0 \\
-\textbf{206194} &                  50.0 \\
-\textbf{245212} &                 100.0 \\
-\textbf{206883} &                   0.0 \\
-\textbf{245459} &                  70.0 \\
+\textbf{0 } &                  50.0 \\
+\textbf{1 } &                  50.0 \\
+\textbf{2 } &                  70.0 \\
+\textbf{3 } &                   0.0 \\
+\textbf{4 } &                  70.0 \\
+\textbf{5 } &                  70.0 \\
+\textbf{6 } &                  70.0 \\
+\textbf{7 } &                  30.0 \\
+\textbf{8 } &                  70.0 \\
+\textbf{9 } &                  50.0 \\
+\textbf{10} &                  70.0 \\
+\textbf{11} &                  50.0 \\
+\textbf{12} &                   0.0 \\
+\textbf{13} &                  30.0 \\
+\textbf{14} &                   0.0 \\
+\textbf{15} &                  70.0 \\
+\textbf{16} &                  50.0 \\
+\textbf{17} &                  70.0 \\
+\textbf{18} &                  50.0 \\
+\textbf{19} &                  70.0 \\
+\textbf{20} &                  70.0 \\
+\textbf{21} &                  50.0 \\
+\textbf{22} &                 100.0 \\
+\textbf{23} &                  70.0 \\
+\textbf{24} &                  70.0 \\
+\textbf{25} &                  50.0 \\
+\textbf{26} &                   0.0 \\
+\textbf{27} &                  30.0 \\
+\textbf{28} &                  70.0 \\
+\textbf{29} &                  50.0 \\
+\textbf{30} &                  30.0 \\
+\textbf{31} &                  50.0 \\
+\textbf{32} &                  50.0 \\
+\textbf{33} &                  50.0 \\
+\textbf{34} &                  70.0 \\
+\textbf{35} &                   0.0 \\
+\textbf{36} &                  50.0 \\
+\textbf{37} &                  50.0 \\
+\textbf{38} &                 100.0 \\
+\textbf{39} &                  50.0 \\
+\textbf{40} &                 100.0 \\
+\textbf{41} &                   0.0 \\
+\textbf{42} &                  70.0 \\
 \end{longtable}
 \end{center}
 
 \subsection{Notas}
-\label{sec:orge3451ec}
+\label{sec:orgdfaf8ed}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
 \end{center}
 
 \subsection{Notas e presença}
-\label{sec:org1e97c64}
+\label{sec:org9a210b3}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
 \end{center}
 
 \section{Novos Clássicos}
-\label{sec:orgd4d90ef}
+\label{sec:orgf8530c0}
 
 \begin{itemize}
 \item[{$\square$}] Identificar respostas das questões (forms)
@@ -127,7 +126,6 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \caption{Notas das resenhas - Novos Clássicos}\\
 \toprule
 {} &  Resenha Novos Clássicos \\
-\textbf{RA    } &                          \\
 \midrule
 \endhead
 \midrule
@@ -137,55 +135,65 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 
 \bottomrule
 \endlastfoot
-\textbf{212883} &                      5.0 \\
-\textbf{212900} &                     10.0 \\
-\textbf{231302} &                      5.0 \\
-\textbf{231732} &                        - \\
-\textbf{213360} &                     10.0 \\
-\textbf{231898} &                      5.0 \\
-\textbf{213731} &                     10.0 \\
-\textbf{232395} &                      7.0 \\
-\textbf{232796} &                      5.0 \\
-\textbf{233335} &                      5.0 \\
-\textbf{233747} &                     10.0 \\
-\textbf{255207} &                      0.0 \\
-\textbf{216459} &                        - \\
-\textbf{235951} &                        - \\
-\textbf{236276} &                        - \\
-\textbf{218090} &                     10.0 \\
-\textbf{255241} &                      7.0 \\
-\textbf{237618} &                     10.0 \\
-\textbf{199735} &                      0.0 \\
-\textbf{218975} &                      5.0 \\
-\textbf{238414} &                      0.0 \\
-\textbf{219613} &                      5.0 \\
-\textbf{219907} &                      7.0 \\
-\textbf{239052} &                      7.0 \\
-\textbf{220194} &                      5.0 \\
-\textbf{201326} &                     10.0 \\
-\textbf{156242} &                      5.0 \\
-\textbf{240317} &                      5.0 \\
-\textbf{240409} &                      7.0 \\
-\textbf{221515} &                      5.0 \\
-\textbf{255293} &                      0.0 \\
-\textbf{241430} &                      5.0 \\
-\textbf{222315} &                     10.0 \\
-\textbf{184528} &                      0.0 \\
-\textbf{222615} &                      3.0 \\
-\textbf{186966} &                      0.0 \\
-\textbf{244321} &                      5.0 \\
-\textbf{244379} &                      5.0 \\
-\textbf{187323} &                      7.0 \\
-\textbf{206194} &                      5.0 \\
-\textbf{245212} &                     10.0 \\
-\textbf{206883} &                      3.0 \\
-\textbf{245459} &                      5.0 \\
+\textbf{0 } &                      5.0 \\
+\textbf{1 } &                     10.0 \\
+\textbf{2 } &                      5.0 \\
+\textbf{3 } &                        - \\
+\textbf{4 } &                     10.0 \\
+\textbf{5 } &                      5.0 \\
+\textbf{6 } &                     10.0 \\
+\textbf{7 } &                      7.0 \\
+\textbf{8 } &                      5.0 \\
+\textbf{9 } &                      5.0 \\
+\textbf{10} &                     10.0 \\
+\textbf{11} &                      0.0 \\
+\textbf{12} &                        - \\
+\textbf{13} &                        - \\
+\textbf{14} &                        - \\
+\textbf{15} &                     10.0 \\
+\textbf{16} &                      7.0 \\
+\textbf{17} &                     10.0 \\
+\textbf{18} &                      0.0 \\
+\textbf{19} &                      5.0 \\
+\textbf{20} &                      0.0 \\
+\textbf{21} &                      5.0 \\
+\textbf{22} &                      7.0 \\
+\textbf{23} &                      7.0 \\
+\textbf{24} &                      5.0 \\
+\textbf{25} &                     10.0 \\
+\textbf{26} &                      5.0 \\
+\textbf{27} &                      5.0 \\
+\textbf{28} &                      7.0 \\
+\textbf{29} &                      5.0 \\
+\textbf{30} &                      0.0 \\
+\textbf{31} &                      5.0 \\
+\textbf{32} &                     10.0 \\
+\textbf{33} &                      0.0 \\
+\textbf{34} &                      3.0 \\
+\textbf{35} &                      0.0 \\
+\textbf{36} &                      5.0 \\
+\textbf{37} &                      5.0 \\
+\textbf{38} &                      7.0 \\
+\textbf{39} &                      5.0 \\
+\textbf{40} &                     10.0 \\
+\textbf{41} &                      3.0 \\
+\textbf{42} &                      5.0 \\
 \end{longtable}
 \end{center}
+\subsection{Notas}
+\label{sec:orgd558929}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
+\end{center}
+\subsection{Notas e Presença}
+\label{sec:orge18a3be}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
+\end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:org6388944}
+\label{sec:orga22f2a5}
 \subsubsection{Sorteio}
-\label{sec:org925b853}
+\label{sec:org48c23d9}
 
 \begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
 pre_selecionados = ["238414"]
@@ -210,23 +218,23 @@ resultado
 
 \begin{verbatim}
 RA Sorteados
-1        156242
-2        201326
-3        218090
-4        221515
-5        222315
-6        222615
-7        233747
-8        237618
-9        244321
-10       244379
-11       245212
-12       245459
-13       255241
+1              1
+2              2
+3              8
+4             21
+5             22
+6             23
+7             26
+8             28
+9             34
+10            36
+11            37
+12            38
+13            42
 \end{verbatim}
 
 \subsubsection{Resultado Turnitin}
-\label{sec:org2e17c29}
+\label{sec:org2cbe7f5}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNvC}Resumo relatório de origilidadade}
@@ -255,34 +263,22 @@ RA & Grau de semelhança\\
 
 \begin{enumerate}
 \item Gráfico
-\label{sec:org4d4c63e}
+\label{sec:orgd726e14}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
 \end{center}
 \item Atualização das notas
-\label{sec:orga78fe84}
+\label{sec:org639dddc}
 \end{enumerate}
-
-
-\subsection{Notas}
-\label{sec:orge4e00ce}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
-\end{center}
-\subsection{Notas e Presença}
-\label{sec:org28939e3}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
-\end{center}
 \subsection{Questões}
-\label{sec:orgc21cc48}
+\label{sec:org348d015}
 
 \begin{verbatim}
 Sobreposição das respostas 0.717948717948718%
 \end{verbatim}
 
 \subsubsection{Importando pacotes e funções}
-\label{sec:org1e9f496}
+\label{sec:orgfb5b84a}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
@@ -300,76 +296,78 @@ Carimbo de data/hora         &        &        &                                
 
 
 \section{Lista de presença e notas}
-\label{sec:orgae9b3e1}
+\label{sec:orgfa9f8f5}
 \begin{center}\begin{landscape}
 \small
 \setlength\LTleft{0pt}
 \setlength\LTright{0pt}
-\begin{longtable}{llrrrrrl}
+\begin{longtable}{lllrrrrrl}
 \caption{Lista de presença e de notas}\label{lista}\\
 \toprule
-{} &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &                   Email \\
-\textbf{RA    } &                                       &                       &             &             &             &                          &                         \\
+{} &      RA &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &               Email \\
 \midrule
 \endhead
 \midrule
-\multicolumn{8}{r}{{Continued on next page}} \\
+\multicolumn{9}{r}{{Continued on next page}} \\
 \midrule
 \endfoot
 
 \bottomrule
 \endlastfoot
-\textbf{212883} &                    ana pasti villalba &                  50.0 &           - &           - &       11.30 &                      5.0 &  a212883@dac.unicamp.br \\
-\textbf{212900} &                     ana paula martins &                  50.0 &        0.00 &        0.00 &       14.78 &                     10.0 &  a212900@dac.unicamp.br \\
-\textbf{231302} &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &       94.78 &                      5.0 &  a231302@dac.unicamp.br \\
-\textbf{231732} &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &  a231732@dac.unicamp.br \\
-\textbf{213360} &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &        0.00 &                     10.0 &  a213360@dac.unicamp.br \\
-\textbf{231898} &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &       13.04 &                      5.0 &  b231898@dac.unicamp.br \\
-\textbf{213731} &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &       31.30 &                     10.0 &  b213731@dac.unicamp.br \\
-\textbf{232395} &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &       12.17 &                      7.0 &  b232395@dac.unicamp.br \\
-\textbf{232796} &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &       18.26 &                      5.0 &  c232796@dac.unicamp.br \\
-\textbf{233335} &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &       12.17 &                      5.0 &  d233335@dac.unicamp.br \\
-\textbf{233747} &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &       95.65 &                     10.0 &  e233747@dac.unicamp.br \\
-\textbf{255207} &                  fernanda lima santos &                  50.0 &           - &           - &           - &                      0.0 &  f255207@dac.unicamp.br \\
-\textbf{216459} &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &  g216459@dac.unicamp.br \\
-\textbf{235951} &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &        0.00 &                        - &  g235951@dac.unicamp.br \\
-\textbf{236276} &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &        0.00 &                        - &  g236276@dac.unicamp.br \\
-\textbf{218090} &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &       93.04 &                     10.0 &  i218090@dac.unicamp.br \\
-\textbf{255241} &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &       87.83 &                      7.0 &  i255241@dac.unicamp.br \\
-\textbf{237618} &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &  j237618@dac.unicamp.br \\
-\textbf{199735} &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &  j199735@dac.unicamp.br \\
-\textbf{218975} &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &  j218975@dac.unicamp.br \\
-\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      5.0 &  j238414@dac.unicamp.br \\
-\textbf{219613} &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &  k219613@dac.unicamp.br \\
-\textbf{219907} &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &  l219907@dac.unicamp.br \\
-\textbf{239052} &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &  l239052@dac.unicamp.br \\
-\textbf{220194} &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &       54.78 &                      5.0 &  l220194@dac.unicamp.br \\
-\textbf{201326} &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &        6.09 &                     10.0 &  l201326@dac.unicamp.br \\
-\textbf{156242} &                 leticia da silva cruz &                   0.0 &           - &           - &       56.52 &                      5.0 &  l156242@dac.unicamp.br \\
-\textbf{240317} &                       luis felipe avi &                  30.0 &           - &       30.77 &        7.83 &                      5.0 &  l240317@dac.unicamp.br \\
-\textbf{240409} &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &        8.70 &                      7.0 &  l240409@dac.unicamp.br \\
-\textbf{221515} &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &       42.61 &                      5.0 &  m221515@dac.unicamp.br \\
-\textbf{255293} &         maria júlia faustino da silva &                  30.0 &           - &           - &        0.00 &                      0.0 &  m255293@dac.unicamp.br \\
-\textbf{241430} &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &       27.83 &                      5.0 &  m241430@dac.unicamp.br \\
-\textbf{222315} &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &        7.83 &                     10.0 &  m222315@dac.unicamp.br \\
-\textbf{184528} &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &        0.00 &                      0.0 &  m184528@dac.unicamp.br \\
-\textbf{222615} &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &       89.57 &                      3.0 &  m222615@dac.unicamp.br \\
-\textbf{186966} &     samuel henrique rezende bernardes &                   0.0 &           - &           - &           - &                      0.0 &  s186966@dac.unicamp.br \\
-\textbf{244321} &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &       92.17 &                      5.0 &  s244321@dac.unicamp.br \\
-\textbf{244379} &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &       79.13 &                      5.0 &  s244379@dac.unicamp.br \\
-\textbf{187323} &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &        7.83 &                      7.0 &  t187323@dac.unicamp.br \\
-\textbf{206194} &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &  t206194@dac.unicamp.br \\
-\textbf{245212} &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &  v245212@dac.unicamp.br \\
-\textbf{206883} &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &  v206883@dac.unicamp.br \\
-\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      0.0 &  v245459@dac.unicamp.br \\
+\textbf{0     } &  212883 &                    ana pasti villalba &                  50.0 &           - &           - &       11.30 &                      5.0 &   a0@dac.unicamp.br \\
+\textbf{1     } &  212900 &                     ana paula martins &                  50.0 &        0.00 &        0.00 &       14.78 &                     10.0 &   a1@dac.unicamp.br \\
+\textbf{2     } &  231302 &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &       94.78 &                      5.0 &   a2@dac.unicamp.br \\
+\textbf{3     } &  231732 &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &   a3@dac.unicamp.br \\
+\textbf{4     } &  213360 &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &        0.00 &                     10.0 &   a4@dac.unicamp.br \\
+\textbf{5     } &  231898 &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &       13.04 &                      5.0 &   b5@dac.unicamp.br \\
+\textbf{6     } &  213731 &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &       31.30 &                     10.0 &   b6@dac.unicamp.br \\
+\textbf{7     } &  232395 &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &       12.17 &                      7.0 &   b7@dac.unicamp.br \\
+\textbf{8     } &  232796 &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &       18.26 &                      5.0 &   c8@dac.unicamp.br \\
+\textbf{9     } &  233335 &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &       12.17 &                      5.0 &   d9@dac.unicamp.br \\
+\textbf{10    } &  233747 &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &       95.65 &                     10.0 &  e10@dac.unicamp.br \\
+\textbf{11    } &  255207 &                  fernanda lima santos &                  50.0 &           - &           - &           - &                      0.0 &  f11@dac.unicamp.br \\
+\textbf{12    } &  216459 &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &  g12@dac.unicamp.br \\
+\textbf{13    } &  235951 &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &        0.00 &                        - &  g13@dac.unicamp.br \\
+\textbf{14    } &  236276 &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &        0.00 &                        - &  g14@dac.unicamp.br \\
+\textbf{15    } &  218090 &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &       93.04 &                     10.0 &  i15@dac.unicamp.br \\
+\textbf{16    } &  255241 &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &       87.83 &                      7.0 &  i16@dac.unicamp.br \\
+\textbf{17    } &  237618 &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &  j17@dac.unicamp.br \\
+\textbf{18    } &  199735 &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &  j18@dac.unicamp.br \\
+\textbf{19    } &  218975 &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &  j19@dac.unicamp.br \\
+\textbf{20    } &  238414 &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      0.0 &  j20@dac.unicamp.br \\
+\textbf{21    } &  219613 &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &  k21@dac.unicamp.br \\
+\textbf{22    } &  219907 &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &  l22@dac.unicamp.br \\
+\textbf{23    } &  239052 &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &  l23@dac.unicamp.br \\
+\textbf{24    } &  220194 &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &       54.78 &                      5.0 &  l24@dac.unicamp.br \\
+\textbf{25    } &  201326 &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &        6.09 &                     10.0 &  l25@dac.unicamp.br \\
+\textbf{26    } &  156242 &                 leticia da silva cruz &                   0.0 &           - &           - &       56.52 &                      5.0 &  l26@dac.unicamp.br \\
+\textbf{27    } &  240317 &                       luis felipe avi &                  30.0 &           - &       30.77 &        7.83 &                      5.0 &  l27@dac.unicamp.br \\
+\textbf{28    } &  240409 &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &        8.70 &                      7.0 &  l28@dac.unicamp.br \\
+\textbf{29    } &  221515 &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &       42.61 &                      5.0 &  m29@dac.unicamp.br \\
+\textbf{30    } &  255293 &         maria júlia faustino da silva &                  30.0 &           - &           - &        0.00 &                      0.0 &  m30@dac.unicamp.br \\
+\textbf{31    } &  241430 &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &       27.83 &                      5.0 &  m31@dac.unicamp.br \\
+\textbf{32    } &  222315 &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &        7.83 &                     10.0 &  m32@dac.unicamp.br \\
+\textbf{33    } &  184528 &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &        0.00 &                      0.0 &  m33@dac.unicamp.br \\
+\textbf{34    } &  222615 &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &       89.57 &                      3.0 &  m34@dac.unicamp.br \\
+\textbf{35    } &  186966 &     samuel henrique rezende bernardes &                   0.0 &           - &           - &           - &                      0.0 &  s35@dac.unicamp.br \\
+\textbf{36    } &  244321 &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &       92.17 &                      5.0 &  s36@dac.unicamp.br \\
+\textbf{37    } &  244379 &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &       79.13 &                      5.0 &  s37@dac.unicamp.br \\
+\textbf{38    } &  187323 &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &        7.83 &                      7.0 &  t38@dac.unicamp.br \\
+\textbf{39    } &  206194 &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &  t39@dac.unicamp.br \\
+\textbf{40    } &  245212 &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &  v40@dac.unicamp.br \\
+\textbf{41    } &  206883 &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &  v41@dac.unicamp.br \\
+\textbf{42    } &  245459 &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      5.0 &  v42@dac.unicamp.br \\
+\textbf{245459} &       - &                                     - &                     - &           - &           - &           - &                      0.0 &                   - \\
+\textbf{238414} &       - &                                     - &                     - &           - &           - &           - &                      5.0 &                   - \\
 \end{longtable}
 \end{landscape}\end{center}
 
 
 \section{Seminários}
-\label{sec:org3d8f9dd}
+\label{sec:org6876697}
 \subsection{Sorteio}
-\label{sec:org9833b80}
+\label{sec:orgbd629ac}
+
 \begin{table}
 \centering
 \caption{Resultado sorteio das atas - Seminários}
@@ -378,23 +376,23 @@ Carimbo de data/hora         &        &        &                                
 {} & Resultado \\
 Grupos   &           \\
 \midrule
-Grupo 1  &    Ata 11 \\
-Grupo 2  &    Ata 12 \\
-Grupo 3  &     Ata 5 \\
-Grupo 4  &     Ata 6 \\
-Grupo 5  &    Ata 10 \\
-Grupo 6  &     Ata 1 \\
-Grupo 7  &     Ata 4 \\
-Grupo 8  &     Ata 2 \\
-Grupo 9  &     Ata 9 \\
-Grupo 10 &     Ata 8 \\
-Grupo 11 &     Ata 3 \\
-Grupo 12 &     Ata 7 \\
+Grupo 1  &     Ata 3 \\
+Grupo 2  &     Ata 6 \\
+Grupo 3  &     Ata 7 \\
+Grupo 4  &    Ata 12 \\
+Grupo 5  &    Ata 11 \\
+Grupo 6  &     Ata 5 \\
+Grupo 7  &     Ata 2 \\
+Grupo 8  &     Ata 1 \\
+Grupo 9  &     Ata 4 \\
+Grupo 10 &    Ata 10 \\
+Grupo 11 &     Ata 9 \\
+Grupo 12 &     Ata 8 \\
 \bottomrule
 \end{tabular}
 \end{table}
 
 
 \subsubsection{{\bfseries\sffamily TODO} Selecionar Atas e criar map para substituir}
-\label{sec:orgcccc87f}
+\label{sec:org26b517c}
 \end{document}
